// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row allows additional classes to be passed through 1`] = `
<div>
  <div
    class="row test-class"
  >
    <style>
      .row {
        @apply flex flex-wrap -mx-16;
      }
      
    </style>
  </div>
</div>
`;

exports[`Row has a row class by default 1`] = `
<div>
  <div
    class="row "
  >
    <style>
      .row {
        @apply flex flex-wrap -mx-16;
      }
      
    </style>
  </div>
</div>
`;

exports[`Row renders correctly without props 1`] = `
<div>
  <div
    class="row "
  >
    <style>
      .row {
        @apply flex flex-wrap -mx-16;
      }
      
    </style>
  </div>
</div>
`;
